# rss

./: .flaskenv  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/rss/: __init__.py
src/rss/static/css/: output.css
src/rss/templates/: base.html  feed.html  icons.jinja2
src/rss/templates/partials/: add_feed.html  entry.html  entry_page.html
